--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <body class="bg-primary">
       <div class="container">
         <div class="row mt-5 mt-md-5">
-          <div class="col-sm-12 col-md-6 offset-md-3 mt-5 mt-md-5 p-5 p-md-5 bg-white rounded">
+          <div class="col-12 col-md-6 offset-md-3 mt-5 mt-md-5 p-5 p-md-5 bg-white rounded">
             <blockquote class="blockquote text-center text-primary">
               <p class="mb-0 quote-body"></p>
               <footer class="blockquote-footer text-primary quote-author"></footer>
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 offset-md-3 p-3 p-md-3">
+          <div class="col-12 col-md-6 offset-md-3 p-3 p-md-3">
             <p class="text-center text-white">by Gabor Danielski</p>
           </div>
         </div>
