--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
-        <title>Bootstrap 4 Layout</title>
+        <title>Random quote machine</title>
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Gabor Danielski">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,800">
         <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body class="bg-primary">
       <div class="container">
         <div class="row mt-5 mt-md-5">
-          <div class="col-12 col-md-6 offset-md-3 mt-5 mt-md-5 p-5 p-md-5 bg-white rounded">
+          <div class="col-10 offset-1 col-md-6 offset-md-3 mt-5 mt-md-5 p-5 p-md-5 bg-white rounded">
             <blockquote class="blockquote text-center text-primary">
               <p class="mb-0 quote-body"></p>
               <footer class="blockquote-footer text-primary quote-author"></footer>
@@ -32,10 +33,10 @@
           </div>
         </div>
       </div>
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
 
-        <script src="/js/quotescript.js"></script>
+        <script src="js/quotescript.js"></script>
     </body>
 </html>
